# tensorrtx

./: .gitignore
yolov8/: CMakeLists.txt  yolov8_det.cpp
yolov8/src/: postprocess.cpp
